--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,9 +7,9 @@ phases:
       # Check AWS CLI version
       - aws --version
       # Log in to Amazon ECR
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 042326304859.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 735958261650.dkr.ecr.us-east-1.amazonaws.com
       # Define repository URI and image tag
-      - REPOSITORY_URI=042326304859.dkr.ecr.us-east-1.amazonaws.com/cource-end-project
+      - REPOSITORY_URI=735958261650.dkr.ecr.us-east-1.amazonaws.com/capstone
       - IMAGE_TAG=build-$(echo $CODEBUILD_BUILD_ID | awk -F":" '{print $2}')
   build:
     commands:
